Classroom: added figure container to gradebook view

--- a/web/resources/styles/gradebooktable.scss
+++ b/web/resources/styles/gradebooktable.scss
@@ -91,6 +91,15 @@ td {
 #figure {
   width: 600px;
   height: 400px;
+  margin-top: 20px;
+}
+
+#figureTitle {
+  float: left;
+}
+
+#figureReturn {
+  float: right;
 }
 
 .studentName {
