--- a/web/templates/gradebook/figure.html
+++ b/web/templates/gradebook/figure.html
@@ -1,4 +1,7 @@
 <div id="utilityView">
-  <div id="figureTitle">{{figureTitle}}</div>
+  <div id="figureToolbar">
+    <div id="figureTitle">{{figureTitle}}</div>
+    <div id="figureReturn" ng-click="toggleGradebook()">go back</div>
+  </div>
   <div id="figure"></div>
 </div>
