Classroom: cleaned up the gradebook views and urls

--- a/web/templates/gradebook/gradebook.html
+++ b/web/templates/gradebook/gradebook.html
@@ -58,7 +58,7 @@
                  ng-blur="updateGrade(student.id, event.id)"></input>
         </td>
       </tr>
-      <!-- the last row showed the averages for each event -->
+      <!-- the last row shows the averages for each event -->
       <tr id="averages">
         <td id="averageLabel"> averages: </td>
         <td id="totalAverage" class="average"> {{totalAverage}} </td>
