Project: coffeescript files are now handled by django compressor

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -2,15 +2,20 @@
 <html>
 
     <head>
-	    <title>Syllabus</title>
+	<title>Syllabus</title>
+        {% load compress %}
         
         {% compress css %}
-	    <link type="text/css" rel="stylesheet" href="/static/styles/normalize.css" ></link>
-	    <link type="text/scss" rel="stylesheet" href="/static/styles/general.scss" ></link>
-	    <link type="text/scss" rel="stylesheet" href="/static/styles/overlay.scss" ></link>
-	    <link type="text/scss" rel="stylesheet" href="/static/styles/multi.scss" ></link>
-        {% block css%}{% endblock %}
-	    {% endcompress %}
+	    <link type="text/css" rel="stylesheet" 
+                  href="/static/styles/normalize.css" ></link>
+	    <link type="text/scss" rel="stylesheet" 
+                  href="/static/styles/general.scss" ></link>
+	    <link type="text/scss" rel="stylesheet" 
+                  href="/static/styles/overlay.scss" ></link>
+	    <link type="text/scss" rel="stylesheet" 
+                  href="/static/styles/multi.scss" ></link>
+            {% block css%}{% endblock %}
+	{% endcompress %}
 
         {% compress js %}
 	    <script src="/static/scripts/jquery.js"></script>
@@ -20,7 +25,6 @@
 	    <script type="text/javascript" src="/static/scripts/overlay.js"></script>
 	    <script type="text/javascript" src="/static/scripts/multi.js"></script>
             {% block js%}{% endblock %}
-            <script type="text/javascript" src="/static/scripts/jquery-migrate-1.2.0.js"></script>
         {% endcompress %}
 	    {% block head %}{% endblock %}
 
@@ -31,10 +35,11 @@
 	<div id="gutter">
 		<div id="nav">
 			<img id="branding" src="/resources/images/branding.png">
-			{% for pair in request.session['links'] %}
-				<a id="nav_{{pair[0]}}" href='{{pair[1]}}'><img src="/resources/images/{{pair[0]}}.png"></a>
+			{% for pair in request.session.links %}
+				<a id="nav_{{pair.0}}"
+				href='{{pair.1}}'><img src="/resources/images/{{pair.0}}.png"></a>
 				
-                        {% else %}
+                        {% empty %}
                             error: could not load permissions middleware to get links
 			{% endfor %}
 		</div>
