Sentry: now displays using django templates

--- a/web/templates/gradebook/home.html
+++ b/web/templates/gradebook/home.html
@@ -17,15 +17,15 @@
 
 <script type="text/javascript" src="/static/scripts/m2m.js"></script>
 
-<script type="text/javascript"
-        src="/static/scripts/gradebook/directives/gradebook.js"></script>
-<script type="text/javascript"
-        src="/static/scripts/gradebook/directives/gsc.js"></script>
-<script type="text/javascript"
-        src="/static/scripts/gradebook/directives/wc.js"></script>
-<script type="text/javascript"
-        src="/static/scripts/gradebook/directives/utilities.js"></script>
-<script type="text/javascript" src="/static/scripts/gradebook/app.js"></script>
+<script type="text/coffeescript"
+        src="/static/scripts/gradebook/directives/gradebook.coffee"></script>
+<script type="text/coffeescript"
+        src="/static/scripts/gradebook/directives/gsc.coffee"></script>
+<script type="text/coffeescript"
+        src="/static/scripts/gradebook/directives/wc.coffee"></script>
+<script type="text/coffeescript"
+        src="/static/scripts/gradebook/directives/utilities.coffee"></script>
+<script type="text/coffeescript" src="/static/scripts/gradebook/app.coffee"></script>
 {% endblock %}
 
 {% block content %}
