--- a/web/templates/sentry.html
+++ b/web/templates/sentry.html
@@ -1,8 +1,11 @@
 <head>
+
+  {% load compress %}
+
   {% compress css %}
         <link type="text/scss" rel="stylesheet" href="/static/styles/sentry.scss"></link>
   {% endcompress %}
-        <script src="/resources/scripts/jquery.js"></script>
+        <script src="/resources/scripts/thirdparty/jquery/dist/jquery.min.js"></script>
         <script src="/resources/scripts/csrf.js"></script>
 	<script src="/resources/scripts/sentry.js"></script>
 </head>
