Classroom: event can now be moved around in the calendar ; added moment.js and other libraries to bower dependencies

--- a/web/templates/calendar/home.html
+++ b/web/templates/calendar/home.html
@@ -13,6 +13,8 @@
 <script type="text/javascript" 
         src="/static/scripts/thirdparty/fullcalendar/fullcalendar.js"></script>
 <script type="text/javascript" src="/static/scripts/thirdparty/fullcalendar/gcal.js"></script>
+<script type="text/javascript" 
+        src="/static/scripts/thirdparty/moment/min/moment-with-langs.min.js"/>
 
 <script type="text/coffeescript" src="/static/scripts/calendar/app.coffee"/>
 <script type="text/coffeescript" src="/static/scripts/calendar/directives/calendar.coffee"/>
