--- a/web/templates/calendar/home.html
+++ b/web/templates/calendar/home.html
@@ -3,6 +3,7 @@
 {% block js%} 
 <script type="text/javascript" src="/static/scripts/thirdparty/jquery/dist/jquery.js"></script>
 <script type="text/javascript" src="/static/scripts/thirdparty/angular/angular.min.js"/>
+<script type="text/javascript" src="/static/scripts/thirdparty/underscore/underscore.js"/>
 
 <script type="text/javascript" src="/static/scripts/thirdparty/jquery-ui/ui/jquery-ui.js"></script>
 <script type="text/javascript"
