--- a/web/templates/calendar/home.html
+++ b/web/templates/calendar/home.html
@@ -27,7 +27,6 @@
 {% endblock %}        
 
 {% block css %}        
-<link type="text/scss" rel="stylesheet" href="/static/styles/tooltipster.scss" ></link>
 <link type="text/css" rel="stylesheet" 
       href="/static/scripts/thirdparty/qtip2/jquery.qtip.css" ></link>
 <link type="text/css" rel="stylesheet" 
@@ -38,7 +37,7 @@
       href="/static/scripts/thirdparty/ngQuickDate/dist/ng-quick-date.css" >
 </link>
 <link type="text/css" rel="stylesheet" 
-      href="/static/scripts/thirdparty/fullcalendar/fullcalendar.css" ></link>
+      href="/static/styles/fc.css" ></link>
 
 <link type="text/scss" rel="stylesheet" href="/static/styles/calendar.scss" ></link>
 {% endblock %}
