--- a/web/resources/styles/fc.css
+++ b/web/resources/styles/fc.css
@@ -141,6 +141,10 @@ html .fc,
     z-index: 10;
 }
 
+.fc-button-newEvent {
+    display: none;
+}
+
 .fc-header-left .fc-button:first-of-type {
     margin: -7px 0 0px -10px;
 }
